@@ -8,7 +8,7 @@
     #var.paths:
 
     # Convert the timestamp to UTC. Requires Elasticsearch >= 6.1.
-    #convert_timezone: false
+    #var.convert_timezone: false
 
     # Prospector configuration (advanced). Any prospector configuration option
     # can be added under this section.
@@ -23,7 +23,7 @@
     #var.paths:
 
     # Convert the timestamp to UTC. Requires Elasticsearch >= 6.1.
-    #convert_timezone: false
+    #var.convert_timezone: false
 
     # Prospector configuration (advanced). Any prospector configuration option
     # can be added under this section.
