@@ -8,7 +8,7 @@
     #var.paths:
 
     # Convert the timestamp to UTC. Requires Elasticsearch >= 6.1.
-    #convert_timezone: false
+    #var.convert_timezone: false
 
   # Authorization logs
   auth:
@@ -19,4 +19,4 @@
     #var.paths:
 
     # Convert the timestamp to UTC. Requires Elasticsearch >= 6.1.
-    #convert_timezone: false
+    #var.convert_timezone: false
